force-app/main/default/objects/Portfolio_Setting__c/Portfolio_Setting__c.object-meta.xml
<CustomObject>
    <label>Portfolio Setting</label>
    <nameField>
        <label>Portfolio Settings Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Portfolio Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>