force-app/main/default/objects/Portfolio_Setting__c/fields/Accent_Color__c.field-meta.xml
<CustomField>
    <fullName>Accent_Color__c</fullName>
    <inlineHelpText>Example: #3b82f6</inlineHelpText>
    <label>Accent Color</label>
    <length>50</length>
    <type>Text</type>
</CustomField>