force-app/main/default/objects/Portfolio_Setting__c/fields/Background_Color__c.field-meta.xml
<CustomField>
    <fullName>Background_Color__c</fullName>
    <inlineHelpText>Example: rgba(255,255,255,0.05)</inlineHelpText>
    <label>Background Color</label>
    <length>50</length>
    <type>Text</type>
</CustomField>