force-app/main/default/objects/Portfolio_Setting__c/fields/Border_Color__c.field-meta.xml
<CustomField>
    <fullName>Border_Color__c</fullName>
    <inlineHelpText>Example: #3b82f6</inlineHelpText>
    <label>Border Color</label>
    <length>50</length>
    <type>Text</type>
</CustomField>