force-app/main/default/objects/Portfolio_Setting__c/fields/Button_Gradient_End__c.field-meta.xml
<CustomField>
    <fullName>Button_Gradient_End__c</fullName>
    <inlineHelpText>Example: #1d4ed8</inlineHelpText>
    <label>Button Gradient End</label>
    <length>50</length>
    <type>Text</type>
</CustomField>