force-app/main/default/objects/Portfolio_Setting__c/fields/Button_Gradient_Start__c.field-meta.xml
<CustomField>
    <fullName>Button_Gradient_Start__c</fullName>
    <inlineHelpText>Example: #3b82f6</inlineHelpText>
    <label>Button Gradient Start</label>
    <length>50</length>
    <type>Text</type>
</CustomField>