force-app/main/default/objects/Portfolio_Setting__c/fields/Card_Background__c.field-meta.xml
<CustomField>
    <fullName>Card_Background__c</fullName>
    <inlineHelpText>Example: #3b82f6</inlineHelpText>
    <label>Card Background</label>
    <length>50</length>
    <type>Text</type>
</CustomField>