force-app/main/default/objects/Portfolio_Setting__c/fields/Card_Border_Radius__c.field-meta.xml
<CustomField>
    <fullName>Card_Border_Radius__c</fullName>
    <inlineHelpText>Example: 14px</inlineHelpText>
    <label>Card Border Radius</label>
    <length>50</length>
    <type>Text</type>
</CustomField>