force-app/main/default/objects/Portfolio_Setting__c/fields/Card_Shadow__c.field-meta.xml
<CustomField>
    <fullName>Card_Shadow__c</fullName>
    <inlineHelpText>Example: 
0 10px 30px,
rgba(0,0,0,0.35)</inlineHelpText>
    <label>Card Shadow</label>
    <length>100</length>
    <type>Text</type>
</CustomField>