force-app/main/default/objects/Portfolio_Setting__c/fields/Hover_Border_Color__c.field-meta.xml
<CustomField>
    <fullName>Hover_Border_Color__c</fullName>
    <inlineHelpText>#1d4ed8</inlineHelpText>
    <label>Hover Border Color</label>
    <length>50</length>
    <type>Text</type>
</CustomField>