force-app/main/default/objects/Portfolio_Setting__c/fields/Muted_Text_Color__c.field-meta.xml
<CustomField>
    <fullName>Muted_Text_Color__c</fullName>
    <inlineHelpText>Example: #6b7280</inlineHelpText>
    <label>Muted Text Color</label>
    <length>50</length>
    <type>Text</type>
</CustomField>