force-app/main/default/objects/Portfolio_Setting__c/fields/Primary_Color__c.field-meta.xml
<CustomField>
    <fullName>Primary_Color__c</fullName>
    <inlineHelpText>Example: #3b82f6</inlineHelpText>
    <label>Primary Color</label>
    <length>50</length>
    <type>Text</type>
</CustomField>