force-app/main/default/objects/Portfolio_Setting__c/fields/Primary_Text_Color__c.field-meta.xml
<CustomField>
    <fullName>Primary_Text_Color__c</fullName>
    <inlineHelpText>Example: #ffffff</inlineHelpText>
    <label>Primary Text Color</label>
    <length>50</length>
    <type>Text</type>
</CustomField>