force-app/main/default/objects/Portfolio_Setting__c/fields/Secondary_Text_Color__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Text_Color__c</fullName>
    <inlineHelpText>Example: #9ca3af</inlineHelpText>
    <label>Secondary Text Color</label>
    <length>50</length>
    <type>Text</type>
</CustomField>